# igloo

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  igloo.sh  igloo_obfuscate.sh  setup.sh  test.sh
src/: igloo.c  igloo.h  igloo_befuddle.c  igloo_befuddle.h  igloo_internal.c  igloo_internal.h  igloo_parser.c  igloo_parser.h  igloo_random.c  igloo_random.h  igloo_types.h
